force-app/main/default/objects/BOM__c.object
<CustomObject>
    <fields>
        <fullName>BOMCategory__c</fullName>
        <label>BOMCategory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOMUsage__c</fullName>
        <label>BOMUsage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Equipment</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>BOM</relationshipLabel>
        <relationshipName>BOM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>alternateBOM__c</fullName>
        <label>alternateBOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>plant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>plant</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Master_Map__c.Type__c</field>
                <operation>equals</operation>
                <value>Plant</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>BOM</relationshipLabel>
        <relationshipName>BOM</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>BOM</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>plant__c</columns>
        <columns>Equipment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>plant__c</field>
            <operation>equals</operation>
            <value>3200</value>
        </filters>
        <filters>
            <field>Equipment__c</field>
            <operation>equals</operation>
            <value>30000364</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>BOM Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>